<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12sp"
    >
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instStart0"
                android:gravity=""
                android:fontFamily="sans-serif"
                android:textSize="12sp"

        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart1"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart2"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart3"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart4"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart5"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
                android:id="@+id/justifiedTextView"/>
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart6"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
                android:id="@+id/justifiedTextView2"/>
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/instStart7"
                android:fontFamily="sans-serif"
                android:textSize="12sp"
                android:id="@+id/justifiedTextView3"/>
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"

                android:fontFamily="sans-serif"
                android:textSize="12sp"
        />

    </LinearLayout>


</ScrollView>