<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:gravity="center"
            android:padding="12sp"
    >
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/horStart1"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"

        />
        <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textAlignment="inherit"
                android:text="@string/horStart2"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="inherit"
                android:text="@string/horStart21"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="21sp"
                android:textAlignment="inherit"
                android:text="@string/horStart22"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"
        />
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textAlignment="inherit"
                android:text="@string/horStart3"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="inherit"
                    android:text="@string/horStart31"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="21sp"
                    android:textAlignment="inherit"
                    android:text="@string/horStart32"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
            />
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textAlignment="inherit"
                android:text="@string/horStart4"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="12sp"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="inherit"
                    android:text="@string/horStart41"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="21sp"
                    android:textAlignment="inherit"
                    android:text="@string/horStart42"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
            />
        </LinearLayout>

    </LinearLayout>



</ScrollView>