<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:background="@color/colorGrisClaro">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingTop="8dp"/>
    <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            android:padding="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/graylight"
            android:outlineSpotShadowColor="@color/colorPrimero"
            app:cardCornerRadius="5dp" android:layout_marginBottom="8dp" android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="0dp" android:id="@+id/cardViewMenuDay">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp">
            <TextView
                    android:text="Horarios de atención"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"
                    android:textColor="@color/colorNegro" android:textSize="18sp" android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp" android:layout_marginBottom="12dp"/>
            <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/horStart1"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorNegroClaro"

                    android:id="@+id/justifiedTextView13"/>
            <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textAlignment="inherit"
                    android:text="@string/horStart2"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorNegroClaro"
                    android:id="@+id/justifiedTextView14"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="inherit"
                        android:text="@string/horStart21"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="12sp"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="21sp"
                        android:textAlignment="inherit"
                        android:text="@string/horStart22"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"

                        android:textSize="12sp"
                />
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textAlignment="inherit"
                    android:text="@string/horStart3"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorNegroClaro"
                    android:id="@+id/textView18"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="inherit"
                        android:text="@string/horStart31"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="12sp"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="21sp"
                        android:textAlignment="inherit"
                        android:text="@string/horStart32"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="12sp"
                />
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textAlignment="inherit"
                    android:text="@string/horStart4"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorNegroClaro"
                    android:id="@+id/textView19"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="inherit"
                        android:text="@string/horStart41"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="12sp"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="21sp"
                        android:textAlignment="inherit"
                        android:text="@string/horStart42"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="12sp"
                />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>